optimised swagger docs + added response jsons
